[package]
name = "essence"
authors = ["jay3332"]
version = "0.3.3"
edition = "2021"
description = "Essential models and database logic for the Adapt chat platform."
homepage = "https://adapt.chat"
license = "AGPL-3.0"
repository = "https://github.com/AdaptChat/essence"
readme = "README.md"
keywords = ["adapt", "adapt-chat"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-trait = { version = "0.1.60", optional = true }
argon2-async = { version = "0.2.0", optional = true }
base64 = { version = "0.20.0", optional = true }
bincode = "1"
bitflags = "1.3.2"
chrono = { version = "0.4.23", features = ["serde"] }
itertools = { version = "0.10", optional = true }
ring = { version = "0.16.20", optional = true }
serde = { version = "1.0", features = ["derive"] }

[dependencies.sqlx]
version = "0.6"
features = ["postgres", "macros", "offline", "runtime-tokio-rustls", "chrono"]
optional = true

[dependencies.utoipa]
git = "https://github.com/juhaku/utoipa"
version = "^2.4.2"
features = ["axum_extras", "chrono"]
optional = true

[features]
default = ["snowflakes"]
auth = ["snowflakes", "dep:argon2-async", "dep:ring", "token-parsing"]
client = []
db = ["dep:async-trait", "dep:itertools", "dep:sqlx", "snowflakes"]
openapi = ["dep:utoipa"]
token-parsing = ["dep:base64", "snowflakes"]
snowflakes = []
